# boot-flask

./: README.md  deploy.md
.github/workflows/: api-tests.yml  build-push.yml  style.yml
api/: .env.example  Dockerfile  app.py  pyproject.toml
api/configs/: app_config.py
api/configs/deploy/: __init__.py
api/configs/extra/: __init__.py  weixin_config.py
api/configs/feature/: __init__.py
api/configs/middleware/: __init__.py
api/configs/packaging/: __init__.py
api/controllers/service_api/: __init__.py  index.py
api/controllers/service_api/wechat/: auth.py
api/controllers/web/: __init__.py  app.py
api/core/errors/: error.py
api/docker/: entrypoint.sh  env.sh
api/extensions/: ext_celery.py  ext_storage.py  ext_weixin.py
api/libs/: external_api.py  helper.py  response.py
api/models/: __init__.py
api/services/errors/: __init__.py
dev/: reformat
dev/pytest/: pytest_all_tests.sh
docker/: .env.example  README.md  docker-compose.middleware.yaml  docker-compose.yaml  middleware.env.example
docker/nginx/conf.d/: default.conf.template
docker/startupscripts/: init_user.script
